examples/test/testpolicy5077.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5077
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key43: value23
      key47: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value36
          key29: value27
          key38: value37
      podSelector:
        matchLabels:
          key11: value43
          key21: value46
          key0: value10
